--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://124.71.207.196:3306/steam?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://124.71.207.196:3306/steam?useUnicode=true&characterEncoding=utf8&useSSL=true
     username: root
     password: root
 
