--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://124.71.207.196:3306/steam?useUnicode=true&characterEncoding=utf8&useSSL=true
+    url: jdbc:mysql://localhost:3306/steam?useUnicode=true&characterEncoding=utf8&useSSL=true
     username: root
-    password: root
+    password: 1234
 
   jpa:
     database: mysql
