--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/steam?useUnicode=true&characterEncoding=utf8&useSSL=true
     username: root
-    password: 1234
+    password: root
 
   jpa:
     database: mysql
